Fixed broken styles in login and register

--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -13,19 +13,19 @@ header {
     margin-top: 4em;
 }
 
-h1, h3 {
+header > h1, h3 {
     font-weight: 300 !important;
 }
 
-h1 {
+header > h1 {
     color: #636363 !important;
 }
 
-h3 {
+header > h3 {
     color: #4a89dc !important;
 }
 
-form {
+form.login {
     width: 380px;
     margin: 4em auto;
     padding: 3em 2em 2em 2em;
@@ -39,7 +39,7 @@ form {
     margin-bottom: 45px;
 }
 
-input {
+form.login > div.group > input {
     font-size: 18px;
     padding: 10px 10px 10px 5px;
     -webkit-appearance: none;
@@ -52,13 +52,13 @@ input {
     border-bottom: 1px solid #757575;
 }
 
-input:focus {
+form.login > div.group > input:focus {
     outline: none;
 }
 
 /* Label */
 
-label {
+form.login > div.group > label {
     color: #999;
     font-size: 18px;
     font-weight: normal;
@@ -71,7 +71,7 @@ label {
 
 /* active */
 
-input:focus ~ label, input.used ~ label {
+form.login > div.group > input:focus ~ label, input.used ~ label {
     top: -20px;
     transform: scale(.75);
     left: -2px;
@@ -107,7 +107,7 @@ input:focus ~ label, input.used ~ label {
 
 /* active */
 
-input:focus ~ .bar:before, input:focus ~ .bar:after {
+form.login > div.group > input:focus ~ .bar:before, input:focus ~ .bar:after {
     width: 50%;
 }
 
@@ -125,7 +125,7 @@ input:focus ~ .bar:before, input:focus ~ .bar:after {
 
 /* active */
 
-input:focus ~ .highlight {
+form.login > div.group > input:focus ~ .highlight {
     animation: inputHighlighter 0.3s ease;
 }
 
